--- a/app2/src/main/res/values/strings.xml
+++ b/app2/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">app2</string>
+    <string name="start">Start service</string>
+    <string name="stop">Stop service</string>
 </resources>
