--- a/servicebindertest/src/main/res/values/strings.xml
+++ b/servicebindertest/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ServiceBinderTest</string>
+    <string name="start">Start</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+
 </resources>
